Add basic 3D desktop prototype and ISO build

--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "^0.160.0",
+    "@react-three/fiber": "^8.14.5",
+    "@react-three/drei": "^9.86.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
