--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predev": "node scripts/copy-env.js",
+    "prebuild": "node scripts/copy-env.js",
+    "pretest": "node scripts/copy-env.js",
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "test": "vitest"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -18,6 +22,10 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
     "typescript": "^5.0.0",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vitest": "^1.5.0",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/jest-dom": "^6.1.4",
+    "jsdom": "^24.0.0"
   }
 }
