--- a/web/package.json
+++ b/web/package.json
@@ -11,21 +11,22 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@react-three/drei": "^9.86.5",
+    "@react-three/fiber": "^8.14.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.160.0",
-    "@react-three/fiber": "^8.14.5",
-    "@react-three/drei": "^9.86.5"
+    "simplex-noise": "^4.0.3",
+    "three": "^0.160.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.2.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
+    "jsdom": "^24.0.0",
     "typescript": "^5.0.0",
     "vite": "^4.4.9",
-    "vitest": "^1.5.0",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/jest-dom": "^6.1.4",
-    "jsdom": "^24.0.0"
+    "vitest": "^1.5.0"
   }
 }
