--- a/services/api/Cargo.toml
+++ b/services/api/Cargo.toml
@@ -10,7 +10,12 @@ axum = "0.7"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
-tonic = { version = "0.11", features = ["transport"] }
+glob = "0.3"
+hyper = { version = "1", features = ["full"] }
+eco-core = { path = "../../engines/eco-core" }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 thiserror = "1.0"
+
+[dev-dependencies]
+tower = { version = "0.5", features = ["util"] }
