Add Ethos chat integration and tests

--- a/apps/web/ether-pod/package.json
+++ b/apps/web/ether-pod/package.json
@@ -9,18 +9,25 @@
     "build": "npm run copy-env && next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@bufbuild/protobuf": "^2.9.0",
+    "@connectrpc/connect": "^2.1.0",
+    "@connectrpc/connect-web": "^2.1.0",
     "@react-three/drei": "^9.86.5",
     "@react-three/fiber": "^8.14.5",
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "simplex-noise": "^4.0.3",
-    "three": "^0.160.0"
+    "three": "^0.160.0",
+    "toml": "^3.0.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.2.1",
     "@types/node": "^20.0.0",
