Adjust connect client for updated protobuf runtime

--- a/apps/web/ethos/frontend/tsconfig.json
+++ b/apps/web/ethos/frontend/tsconfig.json
@@ -17,8 +17,10 @@
       "@/components/*": ["./components/*"],
       "@/lib/*": ["./lib/*"]
     },
-    "types": ["vitest/globals", "@testing-library/jest-dom"]
+    "types": ["vitest/globals", "@testing-library/jest-dom"],
+    "esModuleInterop": true,
+    "plugins": [{ "name": "next" }]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
