--- a/services/ethos-gateway/Cargo.toml
+++ b/services/ethos-gateway/Cargo.toml
@@ -20,6 +20,7 @@ axum = { version = "0.7", features = ["macros", "json", "tokio", "http1"] }
 axum-extra = { version = "0.9", features = ["typed-header"] }
 futures = "0.3"
 jsonwebtoken = "9"
+argon2 = { version = "0.5", features = ["std", "password-hash"] }
 prost = "0.12"
 prost-types = "0.12"
 serde = { version = "1.0", features = ["derive"] }
@@ -33,6 +34,8 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 uuid = { version = "1.7", features = ["serde", "v4", "v5"] }
 chrono = { version = "0.4", features = ["serde"] }
+deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
+tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
 
 matrix-sdk = { version = "0.13", optional = true }
 
