--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "private": true,
   "workspaces": [
+    "packages/config",
     "apps/web/ethos/frontend",
     "apps/web/ether-pod",
     "sdks/js"
   ],
   "scripts": {
-    "lint": "npm run lint -w apps/web/ethos/frontend && npm run lint -w apps/web/ether-pod",
-    "test": "npm run build -w sdks/js && npm run test -w sdks/js && npm run test -w apps/web/ethos/frontend && npm run test -w apps/web/ether-pod",
-    "build": "npm run build -w sdks/js && npm run build -w apps/web/ethos/frontend && npm run build -w apps/web/ether-pod"
+    "lint": "npm run lint -w packages/config && npm run lint -w apps/web/ethos/frontend && npm run lint -w apps/web/ether-pod",
+    "test": "npm run build -w packages/config && npm run build -w sdks/js && npm run test -w sdks/js && npm run test -w apps/web/ethos/frontend && npm run test -w apps/web/ether-pod",
+    "build": "npm run build -w packages/config && npm run build -w sdks/js && npm run build -w apps/web/ethos/frontend && npm run build -w apps/web/ether-pod"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
