--- a/services/indexer/Cargo.toml
+++ b/services/indexer/Cargo.toml
@@ -6,10 +6,17 @@ description = "Indexer service that feeds Tantivy and Qdrant"
 license = "MIT"
 
 [dependencies]
-serde = { version = "1", features = ["derive"] }
-tantivy = "0.21"
+anyhow = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
 reqwest = { version = "0.11", features = ["json"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1.0"
+tantivy = { version = "0.20", default-features = false, features = ["mmap"] }
 tokio = { version = "1", features = ["full"] }
+tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
-anyhow = "1.0"
+uuid = { version = "1", features = ["serde", "v4"] }
+
+[patch.crates-io]
+zstd-safe = { path = "../../vendor/zstd-safe" }
