feat: add demo data seed for ethos gateway

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "lint": "npm run lint -w packages/config && npm run lint -w apps/web/ethos/frontend && npm run lint -w apps/web/ether-pod",
     "test": "npm run build -w packages/config && npm run build -w sdks/js && npm run test -w sdks/js && npm run test -w apps/web/ethos/frontend && npm run test -w apps/web/ether-pod",
-    "build": "npm run build -w packages/config && npm run build -w sdks/js && npm run build -w apps/web/ethos/frontend && npm run build -w apps/web/ether-pod"
+    "build": "npm run build -w packages/config && npm run build -w sdks/js && npm run build -w apps/web/ethos/frontend && npm run build -w apps/web/ether-pod",
+    "seed:demo-data": "cargo run -p ethos-gateway --bin ethos-gateway -- seed-demo-data"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
