--- a/services/ethos-gateway/Cargo.toml
+++ b/services/ethos-gateway/Cargo.toml
@@ -39,6 +39,8 @@ deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
 tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
 dotenvy = "0.15"
 quest-status = { path = "../../shared/quest-status" }
+sha2 = "0.10"
+hex = "0.4"
 
 matrix-sdk = { version = "0.13", optional = true }
 
