--- a/apps/web/ether-pod/package.json
+++ b/apps/web/ether-pod/package.json
@@ -27,7 +27,8 @@
     "simplex-noise": "^4.0.3",
     "three": "^0.160.0",
     "toml": "^3.0.0",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.55.0",
