--- a/apps/web/ether-pod/package.json
+++ b/apps/web/ether-pod/package.json
@@ -28,7 +28,8 @@
     "three": "^0.160.0",
     "toml": "^3.0.0",
     "zustand": "^5.0.8",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "@vercel/og": "^0.6.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.55.0",
