--- a/apps/web/ether-pod/package.json
+++ b/apps/web/ether-pod/package.json
@@ -8,7 +8,8 @@
     "sync-config": "npm --prefix ../../../packages/config run build && npm run generate:config",
     "pretest": "npm run copy-env && npm run sync-config",
     "dev": "npm run copy-env && npm run sync-config && next dev",
-    "build": "npm run copy-env && npm run sync-config && next build",
+    "check:assets": "node scripts/check-textures.cjs",
+    "build": "npm run copy-env && npm run sync-config && npm run check:assets && next build",
     "start": "npm run sync-config && next start",
     "lint": "next lint",
     "test": "vitest run",
