Add analytics event tracking and client instrumentation

--- a/apps/web/ether-pod/tsconfig.json
+++ b/apps/web/ether-pod/tsconfig.json
@@ -27,6 +27,9 @@
       ],
       "@backend/*": [
         "backend/*"
+      ],
+      "@shared/events": [
+        "../../../shared/events/index"
       ]
     },
     "incremental": true,
