--- a/apps/web/ethos/frontend/tsconfig.json
+++ b/apps/web/ethos/frontend/tsconfig.json
@@ -38,6 +38,9 @@
       ],
       "@/utils": [
         "./utils/index"
+      ],
+      "@shared/events": [
+        "../../../../shared/events/index"
       ]
     },
     "types": [
