feat: add ether-net desktop prototype

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "packages/config",
     "apps/web/ethos/frontend",
     "apps/web/ether-pod",
+    "apps/desktop/ether-net",
     "sdks/js"
   ],
   "scripts": {
