--- a/apps/desktop/ether-net/package.json
+++ b/apps/desktop/ether-net/package.json
@@ -1,26 +1,12 @@
 {
-  "name": "ether-net",
-  "version": "0.1.0",
+  "name": "ether-net-desktop",
   "private": true,
-  "type": "module",
+  "version": "0.1.0",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@react-three/drei": "^9.99.0",
-    "@react-three/fiber": "^8.15.12",
-    "lucide-react": "^0.356.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "three": "^0.165.0"
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build"
   },
   "devDependencies": {
-    "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.4.0",
-    "vite": "^5.2.0"
+    "@tauri-apps/cli": "^1.5.11"
   }
 }
