feat: add Ethos mobile Expo app

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "apps/web/ethos/frontend",
     "apps/web/ether-pod",
     "apps/desktop/ether-net",
+    "apps/mobile/ethos",
     "sdks/js"
   ],
   "scripts": {
