Remove async-storage plugin reference from Expo config

--- a/apps/mobile/ethos/app.json
+++ b/apps/mobile/ethos/app.json
@@ -15,9 +15,7 @@
         "backgroundColor": "#0f172a"
       }
     },
-    "plugins": [
-      "@react-native-async-storage/async-storage"
-    ],
+    "plugins": [],
     "extra": {
       "eas": {
         "projectId": "dummy-project-id"
