--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "@typescript-eslint/parser": "^6.7.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "vitest": "^1.6.1"
+  },
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "expo-linear-gradient": "~12.7.2"
   }
 }
