--- a/apps/mobile/ethos/package.json
+++ b/apps/mobile/ethos/package.json
@@ -7,26 +7,30 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "web": "expo start --web",
     "lint": "eslint --ext .ts,.tsx src",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.21.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~50.0.6",
+    "expo": "50.0.21",
     "expo-constants": "~15.4.5",
     "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react": "19.2.0",
+    "react-native": "0.82.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "@expo/metro-config": "0.21.8",
+    "@expo/metro": "~0.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
-    "@types/react": "18.2.45",
+    "@types/react": "19.2.2",
     "@types/react-native": "0.73.0",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
@@ -34,6 +38,12 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "patch-package": "^8.0.0"
+  },
+  "overrides": {
+    "@expo/cli": "0.21.8",
+    "@expo/metro-config": "0.21.8",
+    "@expo/metro": "~0.1.1"
   }
 }
