--- a/apps/mobile/ethos/package.json
+++ b/apps/mobile/ethos/package.json
@@ -10,7 +10,7 @@
     "web": "expo start --web",
     "lint": "eslint --ext .ts,.tsx src",
     "typecheck": "tsc --noEmit",
-    "postinstall": "patch-package"
+    "postinstall": "node ./scripts/update-metro-cache-exports.js && patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.21.0",
