--- a/apps/mobile/ethos/package.json
+++ b/apps/mobile/ethos/package.json
@@ -13,24 +13,30 @@
     "postinstall": "node ./scripts/update-metro-cache-exports.js && patch-package"
   },
   "dependencies": {
+    "@expo/config-plugins": "^7.9.2",
+    "@expo/metro": "~0.1.1",
+    "@expo/metro-config": "^0.17.8",
+    "@expo/prebuild-config": "^6.8.1",
     "@react-native-async-storage/async-storage": "~1.21.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "50.0.21",
+    "expo": "~50.0.0",
     "expo-constants": "~15.4.5",
     "expo-linear-gradient": "~12.7.2",
+    "expo-modules-autolinking": "~1.10.0",
     "expo-status-bar": "~1.11.1",
-    "react": "19.2.0",
-    "react-native": "0.82.0",
+    "metro": "^0.80.12",
+    "metro-config": "^0.80.12",
+    "metro-resolver": "^0.80.12",
+    "react": "^18.2.0",
+    "react-native": "^0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "@expo/metro-config": "0.21.8",
-    "@expo/metro": "~0.1.1"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
-    "@types/react": "19.2.2",
+    "@types/react": "~18.2.45",
     "@types/react-native": "0.73.0",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
@@ -38,8 +44,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "typescript": "5.3.3",
-    "patch-package": "^8.0.0"
+    "patch-package": "^8.0.0",
+    "typescript": "5.3.3"
   },
   "overrides": {
     "@expo/cli": "0.21.8",
