--- a/apps/mobile/ethos/package.json
+++ b/apps/mobile/ethos/package.json
@@ -45,7 +45,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "patch-package": "^8.0.0",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "babel-preset-expo": "^10.0.2"
   },
   "overrides": {
     "@expo/cli": "0.21.8",
