--- a/apps/mobile/ethos/package.json
+++ b/apps/mobile/ethos/package.json
@@ -14,23 +14,18 @@
   },
   "dependencies": {
     "@expo/config-plugins": "^7.9.2",
-    "@expo/metro": "~0.1.1",
-    "@expo/metro-config": "^0.17.8",
     "@expo/prebuild-config": "^6.8.1",
-    "@react-native-async-storage/async-storage": "~1.21.0",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~50.0.0",
-    "expo-constants": "~15.4.5",
-    "expo-linear-gradient": "~12.7.2",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "expo": "54.0.0",
+    "expo-constants": "~15.4.6",
+    "expo-linear-gradient": "^12.7.2",
     "expo-modules-autolinking": "~1.10.0",
     "expo-status-bar": "~1.11.1",
-    "metro": "^0.80.12",
-    "metro-config": "^0.80.12",
-    "metro-resolver": "^0.80.12",
-    "react": "^18.2.0",
-    "react-native": "^0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
+    "react": "18.2.0",
+    "react-native": "0.82.0",
+    "react-native-gesture-handler": "~2.14.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
   },
