--- a/apps/mobile/ethos/package.json
+++ b/apps/mobile/ethos/package.json
@@ -15,33 +15,38 @@
   "dependencies": {
     "@expo/config-plugins": "^7.9.2",
     "@expo/prebuild-config": "^6.8.1",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native/virtualized-lists": "^0.82.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "expo": "54.0.0",
-    "expo-constants": "~15.4.6",
-    "expo-linear-gradient": "^12.7.2",
-    "expo-modules-autolinking": "~1.10.0",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.82.0",
-    "react-native-gesture-handler": "~2.14.1",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "expo": "54.0.13",
+    "expo-asset": "~12.0.9",
+    "expo-constants": "~18.0.9",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-modules-autolinking": "~3.0.8",
+    "expo-modules-core": "~3.0.21",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "whatwg-url-without-unicode": "^8.0.0-3"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~19.1.10",
     "@types/react-native": "0.73.0",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "babel-preset-expo": "~54.0.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "patch-package": "^8.0.0",
-    "typescript": "5.3.3",
-    "babel-preset-expo": "^10.0.2"
+    "typescript": "~5.9.2"
   },
   "overrides": {
     "@expo/cli": "0.21.8",
