--- a/apps/mobile/ethos/package.json
+++ b/apps/mobile/ethos/package.json
@@ -13,15 +13,17 @@
     "postinstall": "node ./scripts/update-metro-cache-exports.js && patch-package"
   },
   "dependencies": {
-    "@expo/config-plugins": "^7.9.2",
-    "@expo/prebuild-config": "^6.8.1",
+    "@expo/config-plugins": "~54.0.1",
+    "@expo/prebuild-config": "~54.0.0",
+    "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native/virtualized-lists": "^0.82.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "expo": "54.0.13",
+    "expo": "^54",
     "expo-asset": "~12.0.9",
     "expo-constants": "~18.0.9",
+    "expo-font": "^14.0.9",
     "expo-linear-gradient": "~15.0.7",
     "expo-modules-autolinking": "~3.0.8",
     "expo-modules-core": "~3.0.21",
